# eau_potable

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
dbt/: dbt_project.yml
dbt/analyses/: ana_ad_merge_tab.sql  create_doc.sql
dbt/models/mart/: mart_ad_histo_categ_services.sql  mart_ad_regie_delegue.sql  mart_ag_communes_merged.sql  mart_ag_entite_with_clusters.sql  mart_ag_evol_prix_qualite_sans_cluster.sql  mart_ag_group_by_cluster_prix_qualite.sql  mart_ag_group_by_dpt_for_map.sql  mart_ag_indicateur_quality.sql  mart_cities_evolution_profesionnalisation.sql  mart_cities_final.sql  mart_entite_coordinates_note.sql  mart_entite_final.sql  mart_mb_correlation_abonnesprice.sql  mart_mb_indicateur_quality_aggregated.sql  marte_at_scorecard_p2.sql  marte_at_scorecard_p3.sql
dbt/models/staging/: sources.yml
dbt/models/staging/Test_Upload/: stg_Test_Upload__test.sql
dbt/models/staging/datasources/: stg_datasources__cities.sql  stg_datasources__composition_communale.sql  stg_datasources__composition_communale_services.sql  stg_datasources__entite_gestion.sql
proto/: funcktion.py  proto_mehdi.ipynb
streamlit/: Introduction.py  Prix_de_leau_par_commune.py  main.py  secrets.toml
streamlit/files/: code_cities.csv
streamlit/pages/: 1_Mise_en_contexte.py  2_Prix_versus_qualite_de_service.py  3_Focus_gestion_de_leau.py
